--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
-Flask==3.0.0
-requests==2.32.3
-gunicorn==21.2.0
+python-telegram-bot[job-queue]==21.6
+Flask==3.0.3
+gunicorn==22.0.0
+python-dotenv==1.0.1
+google-api-python-client==2.138.0
+google-auth==2.34.0
+google-auth-oauthlib==1.2.1
